; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_movenc.c_mov_get_mpeg2_xdcam_codec_tag.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_movenc.c_mov_get_mpeg2_xdcam_codec_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__*, i32* }
%struct.TYPE_4__ = type { i32, i64, i64, i32, i32 }

@AV_FIELD_PROGRESSIVE = common dso_local global i64 0, align 8
@AV_PIX_FMT_YUV420P = common dso_local global i64 0, align 8
@AV_PIX_FMT_YUV422P = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_5__*)* @mov_get_mpeg2_xdcam_codec_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mov_get_mpeg2_xdcam_codec_tag(i32* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %4, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %5, align 4
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @AV_FIELD_PROGRESSIVE, align 8
  %20 = icmp sgt i64 %18, %19
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %6, align 4
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  store i32* %24, i32** %7, align 8
  %25 = load i32*, i32** %3, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @defined_frame_rate(i32* %25, i32* %26)
  store i32 %27, i32* %8, align 4
  %28 = load i32, i32* %5, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %32, label %30

30:                                               ; preds = %2
  %31 = call i32 @MKTAG(i8 signext 109, i8 signext 50, i8 signext 118, i8 signext 49)
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %30, %2
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 0
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 2
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @AV_PIX_FMT_YUV420P, align 8
  %39 = icmp eq i64 %37, %38
  br i1 %39, label %40, label %187

40:                                               ; preds = %32
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 0
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 3
  %45 = load i32, i32* %44, align 8
  %46 = icmp eq i32 %45, 1280
  br i1 %46, label %47, label %88

47:                                               ; preds = %40
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 0
  %50 = load %struct.TYPE_4__*, %struct.TYPE_4__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 4
  %52 = load i32, i32* %51, align 4
  %53 = icmp eq i32 %52, 720
  br i1 %53, label %54, label %88

54:                                               ; preds = %47
  %55 = load i32, i32* %6, align 4
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %87, label %57

57:                                               ; preds = %54
  %58 = load i32, i32* %8, align 4
  %59 = icmp eq i32 %58, 24
  br i1 %59, label %60, label %62

60:                                               ; preds = %57
  %61 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 52)
  store i32 %61, i32* %5, align 4
  br label %86

62:                                               ; preds = %57
  %63 = load i32, i32* %8, align 4
  %64 = icmp eq i32 %63, 25
  br i1 %64, label %65, label %67

65:                                               ; preds = %62
  %66 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 53)
  store i32 %66, i32* %5, align 4
  br label %85

67:                                               ; preds = %62
  %68 = load i32, i32* %8, align 4
  %69 = icmp eq i32 %68, 30
  br i1 %69, label %70, label %72

70:                                               ; preds = %67
  %71 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 49)
  store i32 %71, i32* %5, align 4
  br label %84

72:                                               ; preds = %67
  %73 = load i32, i32* %8, align 4
  %74 = icmp eq i32 %73, 50
  br i1 %74, label %75, label %77

75:                                               ; preds = %72
  %76 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 97)
  store i32 %76, i32* %5, align 4
  br label %83

77:                                               ; preds = %72
  %78 = load i32, i32* %8, align 4
  %79 = icmp eq i32 %78, 60
  br i1 %79, label %80, label %82

80:                                               ; preds = %77
  %81 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 57)
  store i32 %81, i32* %5, align 4
  br label %82

82:                                               ; preds = %80, %77
  br label %83

83:                                               ; preds = %82, %75
  br label %84

84:                                               ; preds = %83, %70
  br label %85

85:                                               ; preds = %84, %65
  br label %86

86:                                               ; preds = %85, %60
  br label %87

87:                                               ; preds = %86, %54
  br label %186

88:                                               ; preds = %47, %40
  %89 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %90 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %89, i32 0, i32 0
  %91 = load %struct.TYPE_4__*, %struct.TYPE_4__** %90, align 8
  %92 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %91, i32 0, i32 3
  %93 = load i32, i32* %92, align 8
  %94 = icmp eq i32 %93, 1440
  br i1 %94, label %95, label %136

95:                                               ; preds = %88
  %96 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %97 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %96, i32 0, i32 0
  %98 = load %struct.TYPE_4__*, %struct.TYPE_4__** %97, align 8
  %99 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %98, i32 0, i32 4
  %100 = load i32, i32* %99, align 4
  %101 = icmp eq i32 %100, 1080
  br i1 %101, label %102, label %136

102:                                              ; preds = %95
  %103 = load i32, i32* %6, align 4
  %104 = icmp ne i32 %103, 0
  br i1 %104, label %123, label %105

105:                                              ; preds = %102
  %106 = load i32, i32* %8, align 4
  %107 = icmp eq i32 %106, 24
  br i1 %107, label %108, label %110

108:                                              ; preds = %105
  %109 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 54)
  store i32 %109, i32* %5, align 4
  br label %122

110:                                              ; preds = %105
  %111 = load i32, i32* %8, align 4
  %112 = icmp eq i32 %111, 25
  br i1 %112, label %113, label %115

113:                                              ; preds = %110
  %114 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 55)
  store i32 %114, i32* %5, align 4
  br label %121

115:                                              ; preds = %110
  %116 = load i32, i32* %8, align 4
  %117 = icmp eq i32 %116, 30
  br i1 %117, label %118, label %120

118:                                              ; preds = %115
  %119 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 56)
  store i32 %119, i32* %5, align 4
  br label %120

120:                                              ; preds = %118, %115
  br label %121

121:                                              ; preds = %120, %113
  br label %122

122:                                              ; preds = %121, %108
  br label %135

123:                                              ; preds = %102
  %124 = load i32, i32* %8, align 4
  %125 = icmp eq i32 %124, 25
  br i1 %125, label %126, label %128

126:                                              ; preds = %123
  %127 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 51)
  store i32 %127, i32* %5, align 4
  br label %134

128:                                              ; preds = %123
  %129 = load i32, i32* %8, align 4
  %130 = icmp eq i32 %129, 30
  br i1 %130, label %131, label %133

131:                                              ; preds = %128
  %132 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 50)
  store i32 %132, i32* %5, align 4
  br label %133

133:                                              ; preds = %131, %128
  br label %134

134:                                              ; preds = %133, %126
  br label %135

135:                                              ; preds = %134, %122
  br label %185

136:                                              ; preds = %95, %88
  %137 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %138 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %137, i32 0, i32 0
  %139 = load %struct.TYPE_4__*, %struct.TYPE_4__** %138, align 8
  %140 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %139, i32 0, i32 3
  %141 = load i32, i32* %140, align 8
  %142 = icmp eq i32 %141, 1920
  br i1 %142, label %143, label %184

143:                                              ; preds = %136
  %144 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %145 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %144, i32 0, i32 0
  %146 = load %struct.TYPE_4__*, %struct.TYPE_4__** %145, align 8
  %147 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %146, i32 0, i32 4
  %148 = load i32, i32* %147, align 4
  %149 = icmp eq i32 %148, 1080
  br i1 %149, label %150, label %184

150:                                              ; preds = %143
  %151 = load i32, i32* %6, align 4
  %152 = icmp ne i32 %151, 0
  br i1 %152, label %171, label %153

153:                                              ; preds = %150
  %154 = load i32, i32* %8, align 4
  %155 = icmp eq i32 %154, 24
  br i1 %155, label %156, label %158

156:                                              ; preds = %153
  %157 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 100)
  store i32 %157, i32* %5, align 4
  br label %170

158:                                              ; preds = %153
  %159 = load i32, i32* %8, align 4
  %160 = icmp eq i32 %159, 25
  br i1 %160, label %161, label %163

161:                                              ; preds = %158
  %162 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 101)
  store i32 %162, i32* %5, align 4
  br label %169

163:                                              ; preds = %158
  %164 = load i32, i32* %8, align 4
  %165 = icmp eq i32 %164, 30
  br i1 %165, label %166, label %168

166:                                              ; preds = %163
  %167 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 102)
  store i32 %167, i32* %5, align 4
  br label %168

168:                                              ; preds = %166, %163
  br label %169

169:                                              ; preds = %168, %161
  br label %170

170:                                              ; preds = %169, %156
  br label %183

171:                                              ; preds = %150
  %172 = load i32, i32* %8, align 4
  %173 = icmp eq i32 %172, 25
  br i1 %173, label %174, label %176

174:                                              ; preds = %171
  %175 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 99)
  store i32 %175, i32* %5, align 4
  br label %182

176:                                              ; preds = %171
  %177 = load i32, i32* %8, align 4
  %178 = icmp eq i32 %177, 30
  br i1 %178, label %179, label %181

179:                                              ; preds = %176
  %180 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 118, i8 signext 98)
  store i32 %180, i32* %5, align 4
  br label %181

181:                                              ; preds = %179, %176
  br label %182

182:                                              ; preds = %181, %174
  br label %183

183:                                              ; preds = %182, %170
  br label %184

184:                                              ; preds = %183, %143, %136
  br label %185

185:                                              ; preds = %184, %135
  br label %186

186:                                              ; preds = %185, %87
  br label %294

187:                                              ; preds = %32
  %188 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %189 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %188, i32 0, i32 0
  %190 = load %struct.TYPE_4__*, %struct.TYPE_4__** %189, align 8
  %191 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %190, i32 0, i32 2
  %192 = load i64, i64* %191, align 8
  %193 = load i64, i64* @AV_PIX_FMT_YUV422P, align 8
  %194 = icmp eq i64 %192, %193
  br i1 %194, label %195, label %293

195:                                              ; preds = %187
  %196 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %197 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %196, i32 0, i32 0
  %198 = load %struct.TYPE_4__*, %struct.TYPE_4__** %197, align 8
  %199 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %198, i32 0, i32 3
  %200 = load i32, i32* %199, align 8
  %201 = icmp eq i32 %200, 1280
  br i1 %201, label %202, label %243

202:                                              ; preds = %195
  %203 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %204 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %203, i32 0, i32 0
  %205 = load %struct.TYPE_4__*, %struct.TYPE_4__** %204, align 8
  %206 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %205, i32 0, i32 4
  %207 = load i32, i32* %206, align 4
  %208 = icmp eq i32 %207, 720
  br i1 %208, label %209, label %243

209:                                              ; preds = %202
  %210 = load i32, i32* %6, align 4
  %211 = icmp ne i32 %210, 0
  br i1 %211, label %242, label %212

212:                                              ; preds = %209
  %213 = load i32, i32* %8, align 4
  %214 = icmp eq i32 %213, 24
  br i1 %214, label %215, label %217

215:                                              ; preds = %212
  %216 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 52)
  store i32 %216, i32* %5, align 4
  br label %241

217:                                              ; preds = %212
  %218 = load i32, i32* %8, align 4
  %219 = icmp eq i32 %218, 25
  br i1 %219, label %220, label %222

220:                                              ; preds = %217
  %221 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 53)
  store i32 %221, i32* %5, align 4
  br label %240

222:                                              ; preds = %217
  %223 = load i32, i32* %8, align 4
  %224 = icmp eq i32 %223, 30
  br i1 %224, label %225, label %227

225:                                              ; preds = %222
  %226 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 49)
  store i32 %226, i32* %5, align 4
  br label %239

227:                                              ; preds = %222
  %228 = load i32, i32* %8, align 4
  %229 = icmp eq i32 %228, 50
  br i1 %229, label %230, label %232

230:                                              ; preds = %227
  %231 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 97)
  store i32 %231, i32* %5, align 4
  br label %238

232:                                              ; preds = %227
  %233 = load i32, i32* %8, align 4
  %234 = icmp eq i32 %233, 60
  br i1 %234, label %235, label %237

235:                                              ; preds = %232
  %236 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 57)
  store i32 %236, i32* %5, align 4
  br label %237

237:                                              ; preds = %235, %232
  br label %238

238:                                              ; preds = %237, %230
  br label %239

239:                                              ; preds = %238, %225
  br label %240

240:                                              ; preds = %239, %220
  br label %241

241:                                              ; preds = %240, %215
  br label %242

242:                                              ; preds = %241, %209
  br label %292

243:                                              ; preds = %202, %195
  %244 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %245 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %244, i32 0, i32 0
  %246 = load %struct.TYPE_4__*, %struct.TYPE_4__** %245, align 8
  %247 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %246, i32 0, i32 3
  %248 = load i32, i32* %247, align 8
  %249 = icmp eq i32 %248, 1920
  br i1 %249, label %250, label %291

250:                                              ; preds = %243
  %251 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %252 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %251, i32 0, i32 0
  %253 = load %struct.TYPE_4__*, %struct.TYPE_4__** %252, align 8
  %254 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %253, i32 0, i32 4
  %255 = load i32, i32* %254, align 4
  %256 = icmp eq i32 %255, 1080
  br i1 %256, label %257, label %291

257:                                              ; preds = %250
  %258 = load i32, i32* %6, align 4
  %259 = icmp ne i32 %258, 0
  br i1 %259, label %278, label %260

260:                                              ; preds = %257
  %261 = load i32, i32* %8, align 4
  %262 = icmp eq i32 %261, 24
  br i1 %262, label %263, label %265

263:                                              ; preds = %260
  %264 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 100)
  store i32 %264, i32* %5, align 4
  br label %277

265:                                              ; preds = %260
  %266 = load i32, i32* %8, align 4
  %267 = icmp eq i32 %266, 25
  br i1 %267, label %268, label %270

268:                                              ; preds = %265
  %269 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 101)
  store i32 %269, i32* %5, align 4
  br label %276

270:                                              ; preds = %265
  %271 = load i32, i32* %8, align 4
  %272 = icmp eq i32 %271, 30
  br i1 %272, label %273, label %275

273:                                              ; preds = %270
  %274 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 102)
  store i32 %274, i32* %5, align 4
  br label %275

275:                                              ; preds = %273, %270
  br label %276

276:                                              ; preds = %275, %268
  br label %277

277:                                              ; preds = %276, %263
  br label %290

278:                                              ; preds = %257
  %279 = load i32, i32* %8, align 4
  %280 = icmp eq i32 %279, 25
  br i1 %280, label %281, label %283

281:                                              ; preds = %278
  %282 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 99)
  store i32 %282, i32* %5, align 4
  br label %289

283:                                              ; preds = %278
  %284 = load i32, i32* %8, align 4
  %285 = icmp eq i32 %284, 30
  br i1 %285, label %286, label %288

286:                                              ; preds = %283
  %287 = call i32 @MKTAG(i8 signext 120, i8 signext 100, i8 signext 53, i8 signext 98)
  store i32 %287, i32* %5, align 4
  br label %288

288:                                              ; preds = %286, %283
  br label %289

289:                                              ; preds = %288, %281
  br label %290

290:                                              ; preds = %289, %277
  br label %291

291:                                              ; preds = %290, %250, %243
  br label %292

292:                                              ; preds = %291, %242
  br label %293

293:                                              ; preds = %292, %187
  br label %294

294:                                              ; preds = %293, %186
  %295 = load i32, i32* %5, align 4
  ret i32 %295
}

declare dso_local i32 @defined_frame_rate(i32*, i32*) #1

declare dso_local i32 @MKTAG(i8 signext, i8 signext, i8 signext, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
